2009-02-16 Francois Suter <typo3@cobweb.ch>

	* Added better display of records in TCEforms (thanks to Fabien Udriot)
	* Added visible warning in BE module about filtered keys
	* Added t3lib_db::sql_free_results() calls wherever relevant
	* Added a button to clear search and all filters

2008-11-07 Francois Suter <typo3@cobweb.ch>

	* Added option for filtering out (extension) keys
	* Released version 2.6.0

2008-10-27 Francois Suter <typo3@cobweb.ch>

	* Added option for limiting the size of the log table
	* Added option for minimum level of severity for logging
	* Added option for configuring autorefresh frequency
	* Optimized hook usage by making it a (pseudo-)singleton

2008-10-13 Francois Suter <typo3@cobweb.ch>

	* Caught unitialized value in BE module

2008-10-13 Francois Suter <typo3@cobweb.ch>

	* Updated the manual
	* Released version 2.5.0

2008-10-09 Francois Suter <typo3@cobweb.ch>

	* Fixed error when linking to log runs beyond the (menu) limit

2008-10-08 Francois Suter <typo3@cobweb.ch>

	* Added page filter
	* Added user filter
	* Added error message when no records are found
	* Refactored part of the code

2008-10-03 Francois Suter <typo3@cobweb.ch>

	* Added handling of $GLOBALS['TYPO3_CONF_VARS']['SC_OPTIONS']['GLOBAL']['debugData']['pid']

2008-08-24 Francois Suter <typo3@cobweb.ch>

	* Corrected page edit link
	* Cleaned up some more code

2008-08-22 Francois Suter <typo3@cobweb.ch>

	* Added log search feature
	* Released version 2.4.0

2008-08-13 Francois Suter <typo3@cobweb.ch>

	* Simplified handling of extra data

2008-08-07 Francois Suter <typo3@cobweb.ch>

	* Caught error when extension is not configured

2008-07-22 Francois Suter <typo3@cobweb.ch>

	* Corrected HTML markup error in BE module

2008-04-23 Francois Suter <typo3@cobweb.ch>

	* Automatically retrieve and store devLog call location (thanks to Kasper Ligaard)

2008-04-23 Francois Suter <typo3@cobweb.ch>

	* Added various selection options for cleaning up log entries